--- a/app/views/cook/home/index.html.erb
+++ b/app/views/cook/home/index.html.erb
@@ -1,2 +1,3 @@
 <h1>Cook::Home#index</h1>
 <p>Find me in app/views/cook/home/index.html.erb</p>
+<%= link_to('logout', destroy_user_session_path, method: :delete) %>
