--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -14,4 +14,6 @@
   </div>
 <% end %>
 
+<%= link_to "Sign in with Google", user_google_oauth2_omniauth_authorize_path %>
+
 <%= render "devise/shared/links" %>
