feat: set password new base view (#91)
* feat: set password new base view

* style: position of div

* fix: travis build failed

* fix: travis yarn install

* fix: travis yarn install

* fix: travis yarn install

* fix: recover old travis conf

* fix: recover old travis conf

* fix: yarn package installation command line

* feat: adding shared links in view

* fix: request changes front

* fix: front minors problems

* fix: css bad manage

* feat: set def button in simple form

* feat: yarn update

* fix: gitignore

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -4,3 +4,7 @@
 @import "base/override";
 
 /* styles */
+@import "styles/password_new/styles_global";
+
+/* UIkit*/
+@import "styles/overwrite/uikit";
