--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,15 +1,30 @@
-<h2><%= t(".forgot_your_password") %></h2>
+<div uk-height-viewport class="uk-background-cover uk-height-large wallpaper">
 
-<%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= f.error_notification %>
+  <div class="uk-padding-small uk-position-center uk-background-muted">
 
-  <div class="form-inputs">
-    <%= f.input :email, required: true, autofocus: true %>
+    <h2 class="title uk-text-bold uk-text-left action_title">
+      <%= t(".forgot_your_password") %>
+    </h2>
+
+    <div class="uk-padding-small">
+      <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+        <%= f.error_notification %>
+
+        <div>
+          <%= f.input :email, required: true, autofocus: true, input_html: { class: 'uk-input' } %>
+        </div>
+
+        <div class="uk-padding-small uk-text-center">
+          <%= f.button :submit, t(".send_me_reset_password_instructions"), class: 'uk-button uk-button-primary' %>
+        </div>
+
+      <% end %>
+
+      <%= render "devise/shared/links" %>
+    </div>
+
   </div>
 
-  <div class="form-actions">
-    <%= f.button :submit, t(".send_me_reset_password_instructions") %>
-  </div>
-<% end %>
+</div>
 
-<%= render "devise/shared/links" %>
+
