--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -4,6 +4,7 @@
 @import "base/override";
 
 /* styles */
+@import "styles/registration_edit/styles_global";
 @import "styles/password_new/styles_global";
 
 /* UIkit*/
