--- a/app/views/cook/home/index.html.erb
+++ b/app/views/cook/home/index.html.erb
@@ -1,3 +1,6 @@
 <h1>Cook::Home#index</h1>
-<p>Find me in app/views/cook/home/index.html.erb</p>
+
+<%= link_to "Edit profile", edit_user_registration_path %>
+
 <%= link_to('logout', destroy_user_session_path, method: :delete) %>
+
