--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,27 +1,55 @@
-<h2><%= t(".title", resource: resource_name.to_s.humanize) %></h2>
+<div uk-height-viewport class="uk-background-cover uk-height-large wallpaper-edit">
 
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= f.error_notification %>
+  <div class="uk-padding-small uk-position-center uk-background-muted">
 
-  <div class="form-inputs">
-    <%= f.input :email, required: true, autofocus: true %>
+    <h2 class="uk-text-bold uk-text-left recipy-title">
+      <%= t(".title", resource: resource_name.to_s.humanize) %>
+    </h2>
 
-    <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-      <p><%= t(".currently_waiting_confirmation_for_email", email: resource.unconfirmed_email) %></p>
-    <% end %>
+    <div>
+      <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: {method: :put}) do |f| %>
+        <%= f.error_notification %>
 
-    <%= f.input :password, autocomplete: "off", hint: t(".leave_blank_if_you_don_t_want_to_change_it"), required: false %>
-    <%= f.input :password_confirmation, required: false %>
-    <%= f.input :current_password, hint: t(".we_need_your_current_password_to_confirm_your_changes"), required: true %>
+        <div class="uk-padding-small">
+
+          <div class="uk-padding-small">
+            <%= f.input :email, required: true, autofocus: true, input_html: {class: 'uk-input'} %>
+          </div>
+
+          <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+            <p><%= t('.currently_waiting_confirmation_for_email', email: resource.unconfirmed_email) %></p>
+          <% end %>
+
+          <div class="uk-padding-small">
+            <%= f.input :password, autocomplete: "off", placeholder: t('.leave_blank_if_you_don_t_want_to_change_it'), required: false, input_html: { class: 'uk-input' } %>
+          </div>
+
+          <div class="uk-padding-small">
+            <%= f.input :password_confirmation, required: false, input_html: { class: 'uk-input' } %>
+          </div>
+
+          <div class="uk-padding-small">
+            <%= f.input :current_password, hint: t('.we_need_your_current_password_to_confirm_your_changes'), required: true, input_html: { class: 'uk-input' } %>
+          </div>
+        </div>
+
+        <div class="uk-padding-small uk-text-center">
+          <%= f.button :submit, t('.update') %>
+        </div>
+      <% end %>
+    </div>
+
+    <div class="uk-text-center">
+      <h3 class="uk-text-lead uk-margin-remove-bottom">
+        <%= t('.cancel_my_account') %>
+      </h3>
+
+      <p class="uk-margin-remove-top">
+        <%= t('.unhappy') %>
+        <%= link_to t('.cancel_my_account'), registration_path(resource_name), data: {confirm: t('.are_you_sure')}, method: :delete %>
+      </p>
+
+      <%= link_to t('devise.shared.links.back'), :back %>
+    </div>
   </div>
-
-  <div class="form-actions">
-    <%= f.button :submit, t(".update") %>
-  </div>
-<% end %>
-
-<h3><%= t(".cancel_my_account") %></h3>
-
-<p><%= t(".unhappy") %> <%= link_to t(".cancel_my_account"), registration_path(resource_name), data: { confirm: t(".are_you_sure") }, method: :delete %></p>
-
-<%= link_to t("devise.shared.links.back"), :back %>
+</div>
