feat: changing the confirmation view (#103)
* feat: changing the confirmation view

* fix: lock files

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -4,6 +4,7 @@
 @import "base/override";
 
 /* styles */
+@import "styles/confirmation_new/confirmation_new";
 @import "styles/registration_edit/styles_global";
 @import "styles/password_new/styles_global";
 
