--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,16 +1,26 @@
-<h2><%= t(".resend_confirmation_instructions") %></h2>
+<div uk-height-viewport class="uk-background-cover uk-height-large wallpaper">
 
-<%= simple_form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
-  <%= f.error_notification %>
-  <%= f.full_error :confirmation_token %>
+  <div class="uk-padding-small uk-position-center uk-background-muted">
 
-  <div class="form-inputs">
-    <%= f.input :email, required: true, autofocus: true %>
+    <h2 class="title uk-text-bold uk-text-left action_title">
+      <%= t(".resend_confirmation_instructions") %>
+    </h2>
+
+    <div class="uk-padding-small">
+      <%= simple_form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
+        <%= f.error_notification %>
+        <%= f.full_error :confirmation_token %>
+
+        <div>
+          <%= f.input :email, required: true, autofocus: true, input_html: { class: 'uk-input' } %>
+        </div>
+
+        <div class="uk-padding-small">
+          <%= f.button :submit, t(".resend_confirmation_instructions"), class: 'uk-button uk-button-primary' %>
+        </div>
+      <% end %>
+
+      <%= render "devise/shared/links" %>
+    </div>
   </div>
-
-  <div class="form-actions">
-    <%= f.button :submit, t(".resend_confirmation_instructions") %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
