--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1,9 +1,11 @@
 /* base */
+
 @import "base/variables";
 @import "base/global";
 @import "base/override";
 
 /* styles */
+@import "styles/sign_up/sign_up";
 @import "styles/confirmation_new/confirmation_new";
 @import "styles/registration_edit/styles_global";
 @import "styles/password_new/styles_global";
