Feat/view new session (#112)
* views ok

* updated : sessions_new view

* updated : shared link view

* feat: merge & set sign_in buttons for twitter, fB, gogle

* fix: google sign_in

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -5,6 +5,7 @@
 @import "base/override";
 
 /* styles */
+@import "styles/sessions_new/style";
 @import "styles/sign_up/sign_up";
 @import "styles/confirmation_new/confirmation_new";
 @import "styles/registration_edit/styles_global";
