Feat fix front view (#116)
* views ok

* fix: fix front errors

--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -15,7 +15,7 @@
           <%= f.input :email, required: true, autofocus: true, input_html: { class: 'uk-input' } %>
         </div>
 
-        <div class="uk-padding-small">
+        <div class="uk-padding-small uk-text-center">
           <%= f.button :submit, t(".resend_confirmation_instructions"), class: 'uk-button uk-button-primary' %>
         </div>
       <% end %>
