--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -17,7 +17,7 @@
     </div>
 
     <div class="uk-text-center">
-      <%= f.button :submit, t(".sign_up"), class: 'uk-button-primary uk-button-large' %>
+      <%= f.button :submit, t(".sign_up"), class: 'uk-button-primary' %>
     </div>
 
     <div class="uk-text-center">
