--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,5 +1,7 @@
 <%- if controller_name != 'sessions' %>
-  <%= link_to t(".sign_in"), new_session_path(resource_name) %><br/>
+  <div class="uk-margin uk-width-large uk-margin-auto uk-text-center">
+    <%= link_to t(".sign_in"), new_session_path(resource_name) %><br/>
+  </div>
 <% end -%>
 
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
