Feat/devise design (#98)
* fix: Add .DS_Store on gitignore

* fix: Set confirmation instructions in mjml type file

* fix: Remove title bar if there is not content for

* feat: Added email changed email

* Fix: tabulation in email_changed file

* feat: new special devise mailer

* feat: Update design for current devise's mails

* Fix: design confirmation

--- a/app/views/devise/mailer/confirmation_instructions.mjml
+++ b/app/views/devise/mailer/confirmation_instructions.mjml
@@ -1,8 +1,7 @@
 <mj-text>
-    <p class="sentence"><%= t('.greeting', recipient: @email) %></p>
+    <p><%= t('.greeting', recipient: @email) %></p>
 
-    <p class="sentence"><%= t('.instruction') %></p>
+    <p><%= t('.instruction') %></p>
 </mj-text>
-<mj-text>
-    <a class="button" href="<%= confirmation_url(@resource, confirmation_token: @token) %>"><%= t('.action') %></a>
-</mj-text>
+
+<mj-button class="button" href="<%= confirmation_url(@resource, confirmation_token: @token) %>"><%= t('.action') %></mj-button>
