--- a/app/views/devise/mailer/password_change.mjml
+++ b/app/views/devise/mailer/password_change.mjml
@@ -1,7 +1,7 @@
 <% content_for :title, t('.subject') %>
 
 <mj-text>
-    <p class="sentence"><%= t('.greeting', recipient: @resource.email) %></p>
-
-    <p class="sentence"><%= t('.message') %></p>
+    <p><%= t('.greeting', recipient: @resource.email) %></p>
+    
+    <p><%= t('.message') %></p>
 </mj-text>
