--- a/app/views/devise/mailer/reset_password_instructions.mjml
+++ b/app/views/devise/mailer/reset_password_instructions.mjml
@@ -1,17 +1,13 @@
 <% content_for :title, t('.subject') %>
 
-<mj-section>
-    <mj-column>
-        <mj-text>
-            <p class="sentence"><%= t('.greeting', recipient: @resource.email) %></p>
+<mj-text>
+    <p><%= t('.greeting', recipient: @resource.email) %></p>
 
-            <p class="sentence"><%= t('.instruction') %></p>
-        </mj-text>
-        <mj-text align="center"><a class="button" href="<%= edit_password_url(@resource, reset_password_token: @token) %>"><%= t('.action') %></a></mj-text>
-        <mj-text>
-            <p class="sentence"><%= t('.instruction_2') %></p>
+    <p><%= t('.instruction') %></p>
+</mj-text>
+<mj-button class="button" href="<%= edit_password_url(@resource, reset_password_token: @token) %>"><%= t('.action') %></mj-button>
+<mj-text>
+    <p><%= t('.instruction_2') %></p>
 
-            <p class="sentence"><%= t('.instruction_3') %></p>
-        </mj-text>
-    </mj-column>
-</mj-section>
+    <p><%= t('.instruction_3') %></p>
+</mj-text>
