--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -4,7 +4,7 @@
       <%= link_to 'Recette', '#', :style => 'color:#424242;', :class => "uk-padding-small"%>
       <%= link_to 'Mes Plannings', '#', :style => 'color:#424242;', :class => "uk-padding-small"%>
       <%= link_to 'Connexion', new_user_session_path, :style => 'color:#424242;', :class => "uk-padding-small"%>
-      <%= link_to 'Déconnexion', destroy_user_session_path, :style => 'color:#424242;', :class => "uk-padding-small"%>
+      <%= link_to 'Déconnexion', '#', :style => 'color:#424242;', :class => "uk-padding-small"%>
   </div>
   <div class="uk-navbar-right">
       <form action="javascript:void(0)">
