--- a/app/views/devise/unlocks/new.html.erb
+++ b/app/views/devise/unlocks/new.html.erb
@@ -1,16 +1,27 @@
-<h2><%= t(".resend_unlock_instructions") %></h2>
+<div uk-height-viewport class="uk-background-cover uk-height-large wallpaper">
+  <div class="uk-padding-small uk-position-center uk-background-muted">
 
-<%= simple_form_for(resource, as: resource_name, url: unlock_path(resource_name), html: { method: :post }) do |f| %>
-  <%= f.error_notification %>
-  <%= f.full_error :unlock_token %>
+      <h2 class="title uk-text-bold uk-text-left action_title">
+        <%= t(".resend_unlock_instructions") %>
+      </h2>
 
-  <div class="form-inputs">
-    <%= f.input :email, required: true, autofocus: true %>
+      <%= simple_form_for(resource, as: resource_name, url: unlock_path(resource_name), html: { method: :post }) do |f| %>
+        <%= f.error_notification %>
+        <%= f.full_error :unlock_token %>
+        <div class="uk-padding-small uk-text-center">
+
+        <div class="form-inputs uk-padding-small uk-text-center">
+          <%= f.input :email, required: true, autofocus: true %>
+        </div>
+
+        <div class="form-actions uk-padding-small uk-text-center">
+          <%= f.button :submit, t(".resend_unlock_instructions") %>
+        </div>
+      <% end %>
+
+    </div>
+    <div class="form-actions uk-padding-small uk-text-center uk-text-bottom">
+      <%= render "devise/shared/links" %>
+    </div>
   </div>
-
-  <div class="form-actions">
-    <%= f.button :submit, t(".resend_unlock_instructions") %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
