--- a/app/assets/stylesheets/base/variables.scss
+++ b/app/assets/stylesheets/base/variables.scss
@@ -1,6 +1,13 @@
-// Colours definitions
+/*
+** colors
+*/
 $recipy-default-color:  #FBFBFB;
 $recipy-primary-color:  #FF9A3B;
 $recipy-secondary-color:  #3C3C3C;
 $recipy-tertiary-color-clear: #474747;
 $recipy-tertiary-color-medium: #424242;
+
+/*
+** navbar
+*/
+$navbar-logo-height: 45px;
