--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,30 +1,30 @@
 <%- if controller_name != 'sessions' %>
-  <div class="uk-margin uk-width-large uk-margin-auto uk-text-center">
-    <%= link_to t(".sign_in"), new_session_path(resource_name) %><br/>
+  <div class="uk-margin-small uk-text-center">
+    <%= link_to t(".sign_in"), new_session_path(resource_name) %>
   </div>
 <% end -%>
 
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-  <div class="uk-margin uk-width-large uk-margin-auto uk-text-center">
+  <div class="uk-margin-small uk-text-center">
     <%= t("shared_links.no_account") %> <%= link_to t(".sign_up"), new_registration_path(resource_name) %>
   </div>
 <% end -%>
 
 <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
-  <div class="uk-margin uk-width-large uk-margin-auto uk-text-center">
+  <div class="uk-margin-small uk-text-center">
     <%= link_to t(".forgot_your_password"), new_password_path(resource_name) %>
   </div>
 <% end -%>
 
 <%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
 
-  <div class="uk-margin uk-width-large uk-margin-auto uk-text-center">
+  <div class="uk-margin-small uk-text-center">
     <%= link_to t('.didn_t_receive_confirmation_instructions'), new_confirmation_path(resource_name) %>
   </div>
 <% end -%>
 
 <%- if devise_mapping.lockable? && resource_class.unlock_strategy_enabled?(:email) && controller_name != 'unlocks' %>
-  <div class="uk-margin uk-width-large uk-margin-auto uk-text-center ">
+  <div class="uk-margin-small uk-text-center ">
     <%= link_to t('.didn_t_receive_unlock_instructions'), new_unlock_path(resource_name) %>
   </div>
 <% end -%>
