--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,29 +1,18 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Recipy</title>
-  <%= csrf_meta_tags %>
-  <%= csp_meta_tag %>
 
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-  <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
-</head>
-<%= render 'layouts/navbar' %>
-<body class="<%= controller_name %> <%= action_name%>">
-<div class="container-fluid">
-  <% flash.each do |key, value| %>
-    <div class="alert alert-<%= key %> col-md-8 col-md-offset-2 main"><%= value %></div>
-  <% end %>
-  <div class="row">
-    <%= yield :sidebar %>
-    <%= yield %>
-  </div>
+  <head>
+    <title>Recipy</title>
+    <%= csrf_meta_tags %>
+    <%= csp_meta_tag %>
+
+    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
+
   <body>
-    <%= render 'layouts/footer' %>
-    <% debug(params) if Rails.env.development? %>
+    <%= render 'shared/navbar' %>
+    <%= yield %>
   </body>
-</div>
-</body>
 </html>
