--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,19 +1,17 @@
-<h2><%= t(".change_your_password") %></h2>
+<div class="uk-position-center">
+  <div class="uk-width-large">
+    <h2 class="uk-text-center"><%= t('.change_your_password') %></h2>
 
-<%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
-  <%= f.error_notification %>
+    <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
+      <%= f.input :reset_password_token, as: :hidden %>
+      <%= f.input :password, label: t('.new_password'), required: true, autofocus: true, hint: (t('devise.shared.minimum_password_length', count: @minimum_password_length) if @minimum_password_length) %>
+      <%= f.input :password_confirmation, label: t('.confirm_new_password'), required: true %>
 
-  <%= f.input :reset_password_token, as: :hidden %>
-  <%= f.full_error :reset_password_token %>
+      <div class="uk-margin-medium">
+        <%= f.button :submit, t('.change_my_password'), class: 'uk-width-1-1' %>
+      </div>
+    <% end %>
 
-  <div class="form-inputs">
-    <%= f.input :password, label: t(".new_password"), required: true, autofocus: true, hint: (t('devise.shared.minimum_password_length', count: @minimum_password_length) if @minimum_password_length) %>
-    <%= f.input :password_confirmation, label: t(".confirm_new_password"), required: true %>
+    <%= render 'devise/shared/links' %>
   </div>
-
-  <div class="form-actions">
-    <%= f.button :submit, t(".change_my_password") %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
