--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"><%= notice %></p>
 
 <h1><%= t("recipe.title.index") %></h1>
-<%  if flash[:success] %>
+<% if flash[:success] %>
   <div class="uk-alert-success" uk-alert>
     <a class="uk-alert-close" uk-close></a>
     <p><%= flash[:success] %></p>
@@ -9,31 +9,37 @@
 <% end %>
 <table>
   <thead>
-    <tr>
-      <th><%= t("recipe.title.title") %></th>
-      <th><%= t("recipe.title.score") %></th>
-      <th><%= t("recipe.title.difficulty") %></th>
-      <th><%= t("recipe.title.description") %></th>
-      <th><%= t("recipe.title.step") %></th>
-      <th><%= t("recipe.title.time") %></th>
-      <th colspan="3"></th>
-    </tr>
+  <tr>
+    <th><%= t("recipe.title.title") %></th>
+    <th><%= t("recipe.title.score") %></th>
+    <th><%= t("recipe.title.difficulty") %></th>
+    <th><%= t("recipe.title.image") %></th>
+    <th><%= t("recipe.title.description") %></th>
+    <th><%= t("recipe.title.step") %></th>
+    <th><%= t("recipe.title.time") %></th>
+    <th colspan="3"></th>
+  </tr>
   </thead>
 
   <tbody>
-    <% @recipes.each do |recipe| %>
-      <tr>
-        <td><%= recipe.title %></td>
-        <td><%= recipe.score %></td>
-        <td><%= recipe.difficulty %></td>
-        <td><%= recipe.description %></td>
-        <td><%= recipe.step %></td>
-        <td><%= recipe.time %></td>
-        <td><%= link_to t("recipe.action.show"), recipe %></td>
-        <td><%= link_to t("recipe.action.edit"), edit_recipe_path(recipe) %></td>
-        <td><%= link_to t("recipe.action.destroy"), recipe, method: :delete, data: { confirm: t("recipe.action.confirm") } %></td>
-      </tr>
-    <% end %>
+  <% @recipes.each do |recipe| %>
+    <tr>
+      <td><%= recipe.title %></td>
+      <td><%= recipe.score %></td>
+      <td><%= recipe.difficulty %></td>
+      <% if recipe.image.attached? %>
+        <td><%= image_tag recipe.image.variant(resize: '100x100') %></td>
+      <% else %>
+        <td>Pas d'image</td>
+      <% end %>
+      <td><%= recipe.description %></td>
+      <td><%= recipe.step %></td>
+      <td><%= recipe.time %></td>
+      <td><%= link_to t("recipe.action.show"), recipe %></td>
+      <td><%= link_to t("recipe.action.edit"), edit_recipe_path(recipe) %></td>
+      <td><%= link_to t("recipe.action.destroy"), recipe, method: :delete, data: {confirm: t("recipe.action.confirm")} %></td>
+    </tr>
+  <% end %>
   </tbody>
 </table>
 
