Fix: Change class in css-class in mjml templates (#166)

--- a/app/views/devise/mailer/confirmation_instructions.mjml
+++ b/app/views/devise/mailer/confirmation_instructions.mjml
@@ -4,4 +4,4 @@
     <p><%= t('.instruction') %></p>
 </mj-text>
 
-<mj-button class="button" href="<%= confirmation_url(@resource, confirmation_token: @token) %>"><%= t('.action') %></mj-button>
+<mj-button css-class="button" href="<%= confirmation_url(@resource, confirmation_token: @token) %>"><%= t('.action') %></mj-button>
