--- a/app/views/devise/mailer/reset_password_instructions.mjml
+++ b/app/views/devise/mailer/reset_password_instructions.mjml
@@ -5,7 +5,7 @@
 
     <p><%= t('.instruction') %></p>
 </mj-text>
-<mj-button class="button" href="<%= edit_password_url(@resource, reset_password_token: @token) %>"><%= t('.action') %></mj-button>
+<mj-button css-class="button" href="<%= edit_password_url(@resource, reset_password_token: @token) %>"><%= t('.action') %></mj-button>
 <mj-text>
     <p><%= t('.instruction_2') %></p>
 
