--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -21,6 +21,7 @@
     <%= f.input :difficulty, :label => t("search.difficulty"), :prompt => t("search.difficulty_max"), :selected => @search_difficulty, collection: 0..10, as: :select, input_html: { class: 'uk-select' }, wrapper_class: "uk-width-1-4@s" %>
     <%= f.input :ingredients, :label => t("search.ingredient"), :selected => @search_ingredients, collection: @ingredients_select, as: :select, :include_blank => false, input_class: false, input_html: { id: "ingredients-select", multiple: true } , wrapper_class: "uk-width-1-4@s", defaults: { input_class: "" } %>
     <%= f.input :time, :label => t("search.time"), :prompt => t("search.time_max"), :selected => @search_time, collection: (0..@time_max).step(5), as: :select, input_html: { class: 'uk-select' }, wrapper_class: "uk-width-1-4@s" %>
+    <%= f.input :sort, :label => t("search.sort_by"), :prompt => t("search.sort_by"), :selected => @sort, collection: @sort_possibilities, as: :select, input_html: { class: 'uk-select' }, wrapper_class: "uk-width-1-4@s", :label_method => lambda { |el| t "search.sort.#{el.first}" } %>
 <% end %>
 <div class="uk-grid-small uk-child-width-1@s uk-child-width-1-4@m uk-padding" uk-grid>
     <% if (@recipes.uniq.count > 0) %>
