--- a/app/views/devise/shared/_omniauth.erb
+++ b/app/views/devise/shared/_omniauth.erb
@@ -1,10 +1,15 @@
-<% if Rails.env.production? && devise_mapping.omniauthable? %>
-  <% resource_class.omniauth_providers.each do |provider| %>
-    <div class="uk-margin-small uk-text-center">
-      <%= link_to omniauth_authorize_path(resource_name, provider), class: 'uk-button uk-button-primary uk-width-1-1 uk-flex uk-flex-middle' do %>
-        <span uk-icon="icon: <%= provider %>"></span>
-        <div class="uk-margin-auto"><%= t('.sign_in_with_provider', provider: OmniAuth::Utils.camelize(provider)) %></div>
-      <% end %>
-    </div>
-  <% end %>
+<% if devise_mapping.omniauthable? %>
+  <div class="uk-margin-small uk-text-center">
+    <%= link_to user_facebook_omniauth_authorize_path, class: 'uk-button uk-button-primary uk-width-1-1 uk-flex uk-flex-middle' do %>
+      <span uk-icon="icon:facebook"></span>
+      <div class="uk-margin-auto"><%= t('devise.facebook') %></div>
+    <% end %>
+  </div>
+
+  <div class="uk-margin-small uk-text-center">
+    <%= link_to user_google_oauth2_omniauth_authorize_path, class: 'uk-button uk-button-primary uk-width-1-1 uk-flex uk-flex-middle' do %>
+      <span uk-icon="icon:google-plus"></span>
+      <div class="uk-margin-auto"><%= t('devise.google_oauth2') %></div>
+    <% end %>
+  </div>
 <% end %>
